fix(java): galho 4 nota 16 — corrige status de StructuredTaskScope (preview, não GA) no cheatsheet